# spark-service-template

./: .dockerignore  .env-test  .pre-commit-config.yaml  .spellcheck.yml  .wordlist.txt  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  template.yaml
.github/workflows/: ci.yml
infrastructure/migrations/: env.py
infrastructure/migrations/versions/: 434a0201311b_create_initial_structure.py
k8s/base/: configmap.yml  deployment.yml  kustomization.yml  secret.yml  service.yml
k8s/overlays/dev/: configmap.yml  deployment.yml  kustomization.yml  secret.yml
migrations/: env.py
src/: main.py  worker.py
src/adapters/clients/: spark_service_hub_client.py
src/adapters/repositories/: template_repository.py  user_repository.py
src/adapters/tasks/: application_tasks.py  dispatcher_tasks.py  sample_tasks.py  template_tasks.py
src/application/ports/: user_repository.py
src/application/use_cases/: user_service.py
src/configs/: __init__.py  celery.py  database.py
src/core/: celery.py  configs.py
src/domain/entities/: template.py  user.py
src/domain/enums/: kind.py
src/infrastructure/: celery.py  database.py
src/utils/: auth.py  github.py  schemas.py  template_schema_factory.py  template_step_dispatcher.py
tests/: conftest.py  test_user_repository.py  test_user_service.py
tests/repositories/: test_template_repository.py
tests/schemas/: test_template_schema_v1beta1.py  test_template_schema_v1beta2.py
tests/utils/: test_handler_schema.py  test_template_schema_factory.py
(+66 files in other folders)
