[tool.poetry]
name = "fastapi-hexagonal-template"
version = "0.1.0"
description = "FastAPI microservice template with hexagonal architecture"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
email-validator = "^2.2.0"
celery = "^5.4.0"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.30.0"
requests = "^2.32.3"
aiofiles = "^24.1.0"
jinja2 = "^3.1.6"
pygithub = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9"
pytest-cov = "^4.1.0"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"
pre-commit = "^3.6.0"
pyspelling = "^2.9.0"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
